# clap-qt

./: .gitattributes  .gitignore  AudioInfoBox.qml.QVhhcE  BarMenu.qml  CMakeLists.txt  ContentArea.qml  DisplayButton.qml  Header.qml  ImportWindow.qml  Main.qml  MainWidget.qml  MainWindow.qml  ParameterWindow.qml  PlayButton.qml  PythonExecutor.cpp  PythonExecutor.h  README.md  ScrollBar.qml  TextButton.qml  TranslationArea.qml  VideoBar.qml  VideoControls.qml  VideoSlider.qml  VideoTimeline.qml  VideoWidget.qml  _BACKUP_1768.gitignore  _LOCAL_1768.gitignore  ffmpeg.cpp  ffmpeghandler.cpp  ffmpeghandler.h  globalVariableManager.cpp  globalVariableManager.h  main.cpp  notificationType.cpp  notificationType.h  projectmanager.cpp  projectmanager.h  pythonexecutor.cpp  pythonexecutor.h  requirements.txt
API/: app_derush.py  app_exportation.py  app_transcription.py  app_translation.py  generate_thumbnails.py
API/models/bert-base-multilingual-cased/: config.json  tf_model.h5  tokenizer.json
API/models/m2m100_418M/: config.json  generation_config.json
API/models/whisper-base/model/: config.json  generation_config.json
API/tmp/thumbnails/: thumbnails.json
API/utils/: audio_extractor.py  common_functions.py  compact_json_encoder.py  format_functions.py  lang_functions.py  lang_map.py  logger.py  ner_functions.py  speech_to_text.py  srt_functions.py  stt_functions.py
Data/: transcription.json
Elements/: ButtonCustom.qml  CheckBoxCustom.qml
Loading/: LoadingWidget.qml
Notification/: NotificationComponent.qml  NotificationWidget.qml
ProjectsList/: ProjectsList.qml  SuppressConfirmation.qml
Scripts/: app_derush.py  app_transcription.py  app_translation.py  generate_thumbnails.py
Scripts/utils/: audio_extractor.py  format_functions.py  srt_functions.py
Settings/: QuitWidget.qml  SettingsView.qml  WindowSettingsView.qml
SpeechConversion/: ChooseLanguage.qml  Header.qml  SpeechConversionWidget.qml  TextBlock.qml
Timeline/: Playhead.qml  ScrollableTimeline.qml  TimelineButtons.qml  TimelineView.qml  VideoClip.qml
Translation/: ContentArea.qml  Header.qml  TranscriptionArea.qml  TranscriptionBlock.qml  TranslationBlock.qml  TranslationWidget.qml
Utils/: Constants.qml  DerushClassColor.qml  DerushClassLegend.qml  IsoLanguageCode.qml
Utils/Notification/: Error.qml  Success.qml
Video/: ButtonPlayer.qml  PlayButton.qml  ScrollableTimeline.qml  TimelineView.qml  VideoPlayerWidget.qml  VideoSlider.qml  VideoTimeline.qml  VideoWidget.qml
VideoWidget/: PlayButton.ui.qml  VideoWidget.ui.qml
windows/: DerushWindow.qml  ImportWindow.qml  MainWindow.qml  ParameterWindow.qml  SettingsWindow.qml  settingsWindow.qml
